src/pages/ui_kit/form_elements/form_elements.scss
.form_elements{
  $const:9.71222222vw;
  $main_padding: max(0px, calc(#{$const*2} - 200px));
  padding: min(4.51388888%, 65px) $main_padding 0 $main_padding;

  display: grid;
  grid-template-columns: minmax(374px, 1.16875fr) repeat(auto-fit, minmax(320px, 1fr));
  grid-gap: max(0px, calc(15vw - 144px));


  &__double{
    grid-column: -3 / -1;
  }
  &__form_block{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }
  &__dropfield_button{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  &__datefields{
    display: flex;
    justify-content: space-between;
    width: 320px;
    & .textfield{
      width: 150px;
    }
  }
  &__fields{
    & > :nth-child(-n+3){
      margin-bottom: 20px;
    }
    & > :nth-child(n+5){
      margin-top: 40px;
    }
  }
  &__inputs, &__slider_buttons{
    & > :nth-child(n+2) {
      margin-top: 40px;
    }
  }
  &__dropfield{
    & > :nth-child(n+2){
      margin-top: 20px;
    }
  }
  &__checkbox_list{
    & > :nth-child(n+2){
      margin-top: 50px;
    }
  }
}

